<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.hajjhealthcare.VerficationCodeActivity"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="150dp">

    <TextView
        android:layout_margin="10dp"
        android:id="@+id/verfication_code_message_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verfication_code_message"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#4689C8"
        android:textStyle="bold" />
    <TextView
        android:layout_margin="10dp"
        android:id="@+id/code_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#4689C8"
        android:textStyle="bold" />
    <EditText
        android:layout_margin="10dp"
        android:id="@+id/verfication_code_edit_text"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint=""
        android:inputType="number" />
    <Button
        android:layout_margin="10dp"
        android:id="@+id/get_shipment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_shipment" />

</LinearLayout>
