<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.android.hajjhealthcare.RegisterActivity"
    android:background="@drawable/background"
    android:paddingTop="150dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/first_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="130dp"
                android:text="@string/firstName"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#4689C8"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/first_name_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstName"
                android:inputType="text" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginLeft="10dp"
            android:paddingTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/last_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="130dp"
                android:text="@string/lastName"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#4689C8"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/last_name_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastName"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginLeft="10dp"
            android:paddingTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/age_text_view"
                android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                android:width="130dp"
                android:text="@string/age"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#4689C8"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/age_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginLeft="10dp"
            android:paddingTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sex_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="130dp"
                android:text="@string/sex"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#4689C8"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sex_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/blood_type_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="130dp"
                android:text="@string/bloodType"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#4689C8"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/blood_type_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginLeft="10dp"
            android:paddingTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/email_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="130dp"
                android:text="@string/email"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#4689C8"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginLeft="10dp"
            android:paddingTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/password_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="130dp"
                android:text="@string/password"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#4689C8"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginLeft="10dp"
            android:paddingTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/confirm_password_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="130dp"
                android:text=" "
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#4689C8"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/confirm_password_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginLeft="10dp"
            android:paddingTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phone_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="130dp"
                android:text="@string/phone"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#4689C8"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/phone_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginLeft="10dp"
            android:paddingTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/length_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="130dp"
                android:text="@string/length"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#4689C8"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/length_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/length"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginLeft="10dp"
            android:paddingTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/weight_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="130dp"
                android:text="@string/weight"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#4689C8"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/weight_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginLeft="10dp"
            android:paddingTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/country_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="130dp"
                android:text="@string/country"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#4689C8"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/country_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/country"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginLeft="10dp"
            android:paddingTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="130dp"
                android:text="@string/birth_date"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#4689C8"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/date_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birth_date"
                android:inputType="date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginLeft="10dp"
            android:paddingTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/relative_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="130dp"
                android:text="@string/relative_name"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#4689C8"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/relative_name_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/relative_name"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginLeft="10dp"
            android:paddingTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/relative_phone_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="130dp"
                android:text="@string/relative_phone"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#4689C8"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/relative_phone_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/relative_phone"
                android:inputType="phone" />
        </LinearLayout>

        <Button
            android:id="@+id/sign_upButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"/>
    </LinearLayout>
</ScrollView>
